--- a/Common/src/.deps/libSU2_a-su2mpi.Po
+++ b/Common/src/.deps/libSU2_a-su2mpi.Po
@@ -1,6 +1,3 @@
-../src/libSU2_a-su2mpi.o: ../src/su2mpi.cpp /usr/include/stdc-predef.h \
- ../src/../include/su2mpi.hpp
-
-/usr/include/stdc-predef.h:
+../src/libSU2_a-su2mpi.o: ../src/su2mpi.cpp ../src/../include/su2mpi.hpp
 
 ../src/../include/su2mpi.hpp:
